--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jitsi test</title>
+    <title>simple Jitsi-flask</title>
+    <!-- change to jquery cdn -->
     <script src="{{url_for('static', filename='jquery.min.js')}}"></script>
     {% block head %}
+
     {% endblock head %}
 </head>
 <body>
